--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -222,3 +222,6 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 		cursor: pointer;
 	}
 }
+.usergroupCheckbox{
+	padding-top: 20px;
+}
