Custom metric template save throgh form

--- a/src/app/application-onboarding/application/application-creation/application.component.html
+++ b/src/app/application-onboarding/application/application-creation/application.component.html
@@ -477,7 +477,7 @@
 <!-- Modal Matric -->
 <div class="modal bd-example-modal-lg fade" id="newMatricTemplate" tabindex="-1" role="dialog" aria-labelledby="newMatricTemplateLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
+    <div class="modal-content" style="min-width:1000px;">
       <div class="modal-header">
         <h5 class="modal-title">New Metric Template</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close" #metricModel>
