Changes related to usergroups permission in application creation

--- a/src/app/application-onboarding/application/application-creation/application.component.less
+++ b/src/app/application-onboarding/application/application-creation/application.component.less
@@ -225,3 +225,11 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 .usergroupCheckbox{
 	padding-top: 20px;
 }
+.checkboxErrorText{
+	font-size: 80%;
+    color: #dc3545;
+}
+.userGroupErrorMessage{
+	color: #c1c1c1;
+	padding-left: 15px;
+}
