Changes related to delete datasource from datasource list

--- a/src/app/application-onboarding/data-source/data-source.component.html
+++ b/src/app/application-onboarding/data-source/data-source.component.html
@@ -46,7 +46,7 @@
                       </thead>
                       <tbody>
                           <tr *ngFor="let datasourceData of currentPage | filter:searchData; let i=index">
-                            <td>{{datasourceData.displayName}}</td>
+                            <td>{{datasourceData.name}}</td>
                             <td>{{datasourceData.datasourceType}}</td>
                              <td>
                               <!-- <a  class="text-muted ml-2" data-toggle="tooltip" data-placement="top" title="Edit" data-toggle="modal" data-target="#dataSource" data-backdrop="static" data-keyboard="false"><i class="fas fa-pencil-alt"></i></a>   -->
